looking nice now

--- a/production/sites/cakelampvm.com/vm_index.html
+++ b/production/sites/cakelampvm.com/vm_index.html
@@ -20,7 +20,7 @@
     <h3 style=" text-align: center;">This is the cakelampvm.com domain that is
       served from your cakelampvm virtual machine<br>
       <span style="font-style: italic;">(as long as browser URL bar actually
-        says "cakelampvm.com" or "www.cakelampvm.com").</span></h3>
+        says just "http://cakelampvm.com" or "http://www.cakelampvm.com").</span></h3>
     <h4 style=" text-align: center;">Official cakelampvm setup guide: <a target="_blank"
         href="docs/manual/cakelampvm_guide_v002.html">The cakelampvm.com VM:
         Configuration and Usage</a></h4>
