checking in the recent efforts at optimizing clam
moved many variables that were constructed during every make out into
the environment.  cleaned up convoluted shell commands to make more
efficient.  removed old compiler tags that were hiding chunks of code.

still need to get the create guid app online; was not working due to
errors in comdef.h from cygwin (could not find new.h, some kind of
snafu in the cygwin headers).

--- a/documentation/clam_manual/clam_docs.html
+++ b/documentation/clam_manual/clam_docs.html
@@ -1104,7 +1104,7 @@
       issued
       and just show the output of running those commands.
     </big>
-    <h4><big>OP_SYSTEM</big></h4>
+    <h4><big>OPERATING_SYSTEM</big></h4>
     <big>&nbsp;&nbsp;&nbsp;&nbsp; This is a flag that defines the
       operating
       system
